# elevenlabs-tts-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  Dockerfile  README.md  REQUIREMENTS.md  package-lock.json  package.json  pyproject.toml  start.sh  tsconfig.json
.cursor/rules/: documentation-process.mdc  git-behaviour.mdc  python-fastapi.mdc  vite-typescript.mdc
.dev-tools/: .gitignore  README.md
.dev-tools/prompts/: prompt_pr.md  prompt_user_story.md
.github/workflows/: docker-build-and-push.yml  python-backend-checks.yml
docs/: deployment-architecture.md  global-deployment-architecture.md
scripts/: build-push-ecr.sh  build-run.sh
src/: index.ts
src/backend/: .env.example  README.md  __main__.py  app.py  elevenlabs_client.py  mcp_tools.py  routes.py  websocket.py
src/config/: config.ts
src/frontend/: build.sh  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.css  App.tsx  index.css
src/frontend/src/services/: api.ts
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/aws/: data.tf
terraform/aws/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/aws/ecr/: main.tf  outputs.tf  variables.tf
terraform/aws/ecs/: main.tf  outputs.tf  variables.tf
terraform/aws/iam/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  test_mcp_tools.py
tests/backend/: __init__.py  conftest.py  test_mcp_tools.py
